--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,11 @@ header {
     text-decoration-thickness: 2px;
     font-family:Georgia, 'Times New Roman', Times, serif;
   }
+  #background{
+   width: 100%;
+   height: 100px;
+   
+  }
   h2{
     color:#3c3744;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -70,8 +75,22 @@ header {
   margin:auto;
 }
 
+.container {
+  position: relative;
+  font-family: Arial;
+}
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 .img-div{
   max-width: 100%;
+ 
 }
 #sub-image-div{
   display: flex;
@@ -110,44 +129,21 @@ header {
       text-decoration-thickness: 2px;
       font-family:Georgia, 'Times New Roman', Times, serif;
       bottom: 0;
-      margin-bottom:  10px;
-      position: fixed;
-      border-right: solid 3px;
-      text-align: center;
+      position: absolute;
     justify-content: space-between;
     min-width: 300px;
     align-items: center;
+    flex-basis: 30%;
+  text-align: center;
+  border-right: solid 3px;
+  margin-bottom: 10px;
   }
-  .nav2{
-    align-items: right;
-    display: flex;
+  #nav2 {
+    right:0;
     
   }
-  
-
-
 
   .footer-widgets .widget_nav_menu li {
     display: flex;
     
   }
-
-  /* <section class="flex-section">
-  <article class="left-column">
-      <h2>About Me</h2>
-  </article>
-  <article class="right-column">
-      <div class="main-img-div img-div">
-        <img src="./assets/images/beach picture.jpeg" alt="beach picture">
-      </div>
-      <div class="img-div">
-          <div id="sub-image-div">
-              <img src="./assets/images/beach picture.jpeg" alt="beach picture">
-              <img src="./assets/images/beach picture.jpeg" alt="beach picture">
-          </div>
-          <div id="sub-image-div2">
-              <img src="./assets/images/beach picture.jpeg" alt="beach picture">
-              <img src="./assets/images/beach picture.jpeg" alt="beach picture">
-          </div>
-      </div>
-  </article> */
