--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,22 @@
-
-
+*{
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 body {
     display: flex;
     flex-direction: column;
-    line-height: 1.0;
+    /* line-height: 1.0; */
   }
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1%;
-    background-color: #3c3744;
+    background-color: #505050;
     color: #fff;
   }
   h1 {
     font-size: 250%;
-    background-color:#b4c5e4;
+    background-color:rgba(191, 185, 185, 0.876);
     color:#3c3744;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
@@ -25,9 +26,9 @@ header {
     min-width: 300px;
   }
   nav a {
-    color: #b4c5e4;
+    color: rgba(191, 185, 185, 0.876);
     font-weight:lighter;
-    text-decoration-thickness: 2px;
+    text-decoration-thickness: 3px;
     font-family:Georgia, 'Times New Roman', Times, serif;
   }
   #background{
@@ -61,8 +62,19 @@ header {
   flex-basis: 70%;
  }
  .right-column div{
-  
   margin-left: 10%;
+ }
+ #footer{
+  color: #b4c5e4;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  text-decoration: none;
+  
+ }
+ #footer a{
+  color: #3c3744;
+  text-decoration-thickness: 2px;
  }
 .left-column{
   flex-basis: 30%;
@@ -77,17 +89,86 @@ header {
 
 .container {
   position: relative;
-  font-family: Arial;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 14px;
+}
+.text-block-b{
+  position: absolute;
+  bottom: 20px;
+  padding-left: 4px;
+  padding-right: 4px;
+  background-color: #505050;
+  color:rgb(226, 216, 216);
+  font-size: 30px;
+  right: 10px;
+
 }
 .text-block {
   position: absolute;
   bottom: 20px;
-  right: 20px;
-  background-color: black;
-  color: white;
-  padding-left: 20px;
-  padding-right: 20px;
+  left: -17%;
+  background-color: rgb(226, 216, 216);
+  color:  #3c3744;
+  padding-left: 4px;
+  padding-right: 4px;
+  text-align: center;
 }
+.text-block p{
+  font-size: 10px;
+}
+.text-block1{
+  position: absolute;
+  bottom: 15px;
+  left: -615px;
+  background-color: rgb(226, 216, 216);
+  color:  #3c3744;
+  padding-left: 4px;
+  padding-right: 4px;
+  text-align: center;
+}
+.text-block1 p{
+  font-size: 10px;
+}
+.text-block2{
+  position: absolute;
+  bottom: 15px;
+  left: -335px;
+  background-color: rgb(226, 216, 216);
+  color:  #3c3744;
+  padding-left: 4px;
+  padding-right: 4px;
+  text-align: center;
+}
+.text-block2 p{
+  font-size: 10px;
+}
+.text-block3 {
+  position: absolute;
+  top: 135px;
+  right: 565px;
+  background-color: rgb(226, 216, 216);
+  color:  #3c3744;
+  padding-left: 4px;
+  padding-right: 4px;
+  text-align: center;
+}
+.text-block3 p{
+  font-size: 10px;
+}
+.text-block4{
+  position: absolute;
+  top: 150px;
+    right: 289px;
+  background-color: rgb(226, 216, 216);
+  color:  #3c3744;
+  padding-left: 4px;
+  padding-right: 4px;
+  text-align: center;
+}
+.text-block4 p{
+  font-size: 10px;
+}
+
 .img-div{
   max-width: 100%;
  
@@ -97,20 +178,20 @@ header {
   margin: 0;
 }
 .main-img-div img{
-  max-width:400px;
-  border: 5px solid #b4c5e4;
+  max-width:500px;
+  border: 5px solid rgb(226, 216, 216);
   margin: 5px
 
 }
 #sub-image-div img{
-  max-width: 200px;
-  border: 5px solid #b4c5e4;
+  max-width: 250px;
+  border: 5px solid rgb(226, 216, 216);
   margin: 5px
 
 }
 #sub-image-div2 img{
-  max-width: 200px;
-  border: 5px solid #b4c5e4;
+  max-width: 250px;
+  border: 5px solid rgb(226, 216, 216);
   margin: 5px
   ;
 }
@@ -118,30 +199,56 @@ header {
   display: flex;
   margin: 0;
 }
-.footer2 h2{
-  margin: auto;
-}
- .footer2{
 
-     min-width: 300px;
-      
-      font-weight:lighter;
-      text-decoration-thickness: 2px;
-      font-family:Georgia, 'Times New Roman', Times, serif;
-      bottom: 0;
-      position: absolute;
-    justify-content: space-between;
-    min-width: 300px;
-    align-items: center;
-    flex-basis: 30%;
-  text-align: center;
-  border-right: solid 3px;
-  margin-bottom: 10px;
+@media screen and (max-width: 600px) {
+ 
+  
+  .main-img-div img{
+    max-width:200px;
+  
   }
-  #nav2 {
-    right:0;
+  #sub-image-div img{
+    max-width: 100px;
+   
+  
+  }
+  #sub-image-div2 img{
+    max-width: 100px;
+
+  }
+  #footer li{
+    margin: 5px;
+   font-size: 14px;
+  }
+  .text-block{
     
   }
+  .container{
+   
+  }
+  .text-block-b{
+
+  }
+  .text-block1{
+    position: absolute;
+    bottom: 15px;
+    left: -265px;
+  }
+  .text-block2{
+    position: absolute;
+  bottom: 15px;
+  left: -145px;
+  }
+  .text-block3 {
+    position: absolute;
+    top: 36px;
+    left: -264px;}
+ .text-block4{
+  position: absolute;
+  top: 50px;
+  right: 100px;
+ }
+ 
 
   .footer-widgets .widget_nav_menu li {
     display: flex;
